tests/should_fail/match_float_on_string.nv
module fail
// Float pattern on string — type mismatch
let s = "hello"
let r = match s {
    3.14 => "pi",
    _ => "other",
}
